Refactor security configuration and clean up Clinica-related classes; remove unused methods and streamline imports